--- a/server/djangoapp/.env
+++ b/server/djangoapp/.env
@@ -1,2 +1,2 @@
-backend_url =https://yajneshkhara-3030.theiadockernext-0-labs-prod-theiak8s-4-tor01.proxy.cognitiveclass.ai
-sentiment_analyzer_url=https://sentianalyzer.1ujrraipp3hw.us-south.codeengine.appdomain.cloud
+backend_url =https://yajneshkhara-3030.theiadockernext-0-labs-prod-theiak8s-4-tor01.proxy.cognitiveclass.ai/
+sentiment_analyzer_url=https://sentianalyzer.1ur4nhumu9vt.us-south.codeengine.appdomain.cloud
