upgraded jshint config

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -53,6 +53,6 @@ jobs:
 
     - name: Run Linter
       run: |
-        # This command finds all JavaScript files recursively and runs JSHint with ES6 support
-        find ./server -name "*.js" -exec jshint --esversion 6 {} +
+        # This command finds all JavaScript files recursively and runs JSHint
+        find ./server -name "*.js" -exec jshint {} +
         echo "Linted all the js files successfully"
