--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -53,6 +53,6 @@ jobs:
 
     - name: Run Linter
       run: |
-        # This command finds all JavaScript files recursively and runs JSHint
-        find ./server -name "*.js" -exec jshint {} +
+        # This command finds all JavaScript files recursively and runs JSHint on them
+        find ./server/database -name "*.js" -exec jshint --esversion 6 --undef --unused --reporter checkstyle {} +
         echo "Linted all the js files successfully"
